[package]
name = "scrypt-wasm"
version = "0.2.0"
authors = ["oplik0"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
getrandom = { version = "0.2", features = ["js"] }
scrypt = { version = "0.11", default-features = false }
talc = { version = "4.3.1", default-features = false, features = ["lock_api"] }
wasm-bindgen = { version = "=0.2.91", default-features = false, features = ["spans"] }

[dev-dependencies]
wasm-bindgen-test = "=0.3.41"

[profile.release]
opt-level = 3

[features]
default = []
