[package]
name = "scrypt-wasm"
version = "0.2.1"
authors = ["oplik0"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
getrandom = { version = "0.2", features = ["js"] }
scrypt = { version = "0.11", default-features = false }
wasm-bindgen = { version = "=0.2.92", default-features = false, features = ["spans"] }

[dev-dependencies]
wasm-bindgen-test = "=0.3.42"

[profile.release]
opt-level = 3
strip = true
lto = true

[features]
default = []

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['--enable-simd']